# pypeduct

./: README.md  conftest.py  pyproject.toml
.box/: original_piped.py
.github/workflows/: publish.yml
docs/: AI workflow.md  argument_unpacking_spec.md  howto.md  showcase.ipynb
src/: __init__.py  pipe_transformer.py
src/pypeduct/: .test.py  __init__.py  exceptions.py  helpers.py  pyping.py  transformer.py
tests/: !tdd_test_.py  .test.py  tdd.py  tdd_test.py  test.py  test_!copilot.py  test_!deepseek.py  test_!gemini.py  test_.py  test_async.py  test_classes.py  test_closures.py  test_comprehension_generator.py  test_comprehensions.py  test_conditional.py  test_decorated_property.py  test_decorators.py  test_esoteric.py  test_exception_handling.py  test_foo.py  test_hof.py  test_lambda.py  test_partial.py  test_pyping.py  test_pyping_copilot.py  test_pyping_gemini.py  test_tuple_unpacking.py  test_walrus.py
