[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipes"
version = "0.1.0"
description = "A project for pipe transformations"
authors = [
    { name = "Anselm Kiefner", email = "pipes-github@anselm.kiefner.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

[project.urls]
"Homepage" = "https://github.com/amogorkon/pipes"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc"]